--- a/index.html
+++ b/index.html
@@ -87,6 +87,177 @@
 
 	<!--====  End of Homepage Banner  ====-->
 
+	<!--===========================
+=            About            =
+============================-->
+
+	<section class="about section bg-2" id="about">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 align-self-center text-center">
+					<!-- Image Content -->
+					<div class="image-block">
+						<img class="phone-thumb-md" src="images/iphone-feature.png" alt="iphone-feature"
+							class="img-fluid">
+					</div>
+				</div>
+				<div class="col-lg-6 col-md-10 m-md-auto align-self-center ml-auto">
+					<div class="about-block">
+						<!-- About 01 -->
+						<div class="about-item">
+							<div class="icon">
+								<i class="ti-panel"></i>
+							</div>
+							<div class="content">
+								<h5>Easy-to-use NFT Creator</h5>
+								<p> Do you want to launch your own NFT and sell your NFTs on the OpenSea NFT
+									Marketplace? Your search for the perfect and easy-to-use NFT Creator ends here.
+								</p>
+							</div>
+						</div>
+						<!-- About 02 -->
+						<div class="about-item active">
+							<div class="icon">
+								<i class="ti-palette"></i>
+							</div>
+							<div class="content">
+								<h5>App for creators & artists</h5>
+								<p>“Swinftly” is a revolutionary NFT Creator app for creators & artists. You can easily
+									select photos from your phone gallery and turn them into an NFT. You can then launch
+									these NFTs on the Opensea NFT Marketplace within a few clicks.</p>
+							</div>
+						</div>
+						<!-- About 03 -->
+						<div class="about-item">
+							<div class="icon">
+								<i class="ti-vector"></i>
+							</div>
+							<div class="content">
+								<h5>Mint photos into NFTs</h5>
+								<p>You can use your rare and limited edition collection of photos and mint them into an
+									NFT. Swinftly is for the artist community and network for creators who want to post
+									their work, earn income and inspire others.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!--====  End of About  ====-->
+
+	<!--==============================
+=            Features            =
+===============================-->
+
+	<section class="section feature" id="feature">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<div class="section-title">
+						<h2>App Features</h2>
+						<p>Are you still looking for reasons why this NFT Creator app is the best and most convenient
+							app to mint NFTs? Below are some incredible features of the app.</p>
+					</div>
+				</div>
+			</div>
+			<div class="row bg-elipse">
+				<div class="col-lg-4 align-self-center text-center text-lg-right">
+					<!-- Feature Item -->
+					<div class="feature-item">
+						<!-- Icon -->
+						<div class="icon">
+							<i class="ti-brush-alt"></i>
+						</div>
+						<!-- Content -->
+						<div class="content">
+							<h5>NFTs are minted on the Polygon Blockchain</h5>
+							<!-- <p>NFTs are minted on the Polygon Blockchain -->
+							</p>
+						</div>
+					</div>
+					<!-- Feature Item -->
+					<div class="feature-item">
+						<!-- Icon -->
+						<div class="icon">
+							<i class="ti-gift"></i>
+						</div>
+						<!-- Content -->
+						<div class="content">
+							<h5>Low Gas Fees</h5>
+							<!-- <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising -->
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 text-center">
+					<!-- Feature Item -->
+					<div class="feature-item mb-0">
+						<!-- Icon -->
+						<div class="icon">
+							<i class="ti-comments"></i>
+						</div>
+						<!-- Content -->
+						<div class="content">
+							<h5>Connect with your Metamask Wallet
+							</h5>
+							<!-- <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising -->
+							</p>
+						</div>
+					</div>
+					<div class="app-screen">
+						<img class="img-fluid" src="images/i-phone-screen.png" alt="app-screen">
+					</div>
+					<!-- Feature Item -->
+					<div class="feature-item">
+						<!-- Icon -->
+						<div class="icon">
+							<i class="ti-support"></i>
+						</div>
+						<!-- Content -->
+						<div class="content">
+							<h5>Launch your NFT on the OpenSea Marketplace</h5>
+							<!-- <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising -->
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 text-center text-lg-left align-self-center">
+					<!-- Feature Item -->
+					<div class="feature-item">
+						<!-- Icon -->
+						<div class="icon">
+							<i class="ti-image"></i>
+						</div>
+						<!-- Content -->
+						<div class="content">
+							<h5>Mint your NFTs in just a few minutes</h5>
+							<!-- <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising -->
+							</p>
+						</div>
+					</div>
+					<!-- Feature Item -->
+					<div class="feature-item">
+						<!-- Icon -->
+						<div class="icon">
+							<i class="ti-pie-chart"></i>
+						</div>
+						<!-- Content -->
+						<div class="content">
+							<h5>Simple and easy app controls
+							</h5>
+							<!-- <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising -->
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!--====  End of Features  ====-->
+
 	<!-- JAVASCRIPTS -->
 	<script src="plugins/jquery/jquery.js"></script>
 	<script src="plugins/bootstrap/bootstrap.min.js"></script>
