--- a/index.html
+++ b/index.html
@@ -257,6 +257,31 @@
 	</section>
 
 	<!--====  End of Features  ====-->
+	<!--==============================
+=            Features            =
+===============================-->
+
+	<section class="section feature" id="feature">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<div class="section-title">
+						<h2>Wallet connection</h2>
+						<!-- <p>Are you still looking for reasons why this NFT Creator app is the best and most convenient
+							app to mint NFTs? Below are some incredible features of the app.</p> -->
+					</div>
+				</div>
+			</div>
+			<div class="text-center">
+				<div>
+					<img class="phone-thumb-md" src="images/cuted.gif" alt="iphone-feature" class="img-fluid">
+				</div>
+			</div>
+		</div>
+
+	</section>
+
+	<!--====  End of Features  ====-->
 
 	<!-- JAVASCRIPTS -->
 	<script src="plugins/jquery/jquery.js"></script>
