--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 						<div class="app-badge">
 							<ul class="list-inline">
 								<li class="list-inline-item">
-									<a href="#" class="btn btn-download"><i class="ti-apple"></i>
+									<a href="https://apps.apple.com/us/app/swinftly/id1623446403"
+										class="btn btn-download"><i class="ti-apple"></i>
 										<div>Download on the<span>App Store</span></div>
 									</a>
 								</li>
@@ -172,7 +173,7 @@
 						</div>
 						<!-- Content -->
 						<div class="content">
-							<h5>NFTs are minted on the Polygon Blockchain</h5>
+							<h5>NFTs are minted on the Polygon Network</h5>
 							<!-- <p>NFTs are minted on the Polygon Blockchain -->
 							</p>
 						</div>
@@ -258,7 +259,7 @@
 
 	<!--====  End of Features  ====-->
 	<!--==============================
-=            Features            =
+=            Wallet connectio            =
 ===============================-->
 
 	<section class="section feature" id="feature">
@@ -266,9 +267,8 @@
 			<div class="row">
 				<div class="col-12">
 					<div class="section-title">
-						<h2>Wallet connection</h2>
-						<!-- <p>Are you still looking for reasons why this NFT Creator app is the best and most convenient
-							app to mint NFTs? Below are some incredible features of the app.</p> -->
+						<h2>Wallet integration</h2>
+						<p>Experience known from desktop browser Web3 apps</p>
 					</div>
 				</div>
 			</div>
