--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
 	<!--====  End of Features  ====-->
 	<!--==============================
-=            Wallet connectio            =
+=            Wallet connection            =
 ===============================-->
 
 	<section class="section feature" id="feature">
@@ -281,7 +281,47 @@
 
 	</section>
 
-	<!--====  End of Features  ====-->
+	<!--====  End of Wallet connection  ====-->
+
+	<!--============================
+=            Footer            =
+=============================-->
+
+	<footer class="footer-main">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 mr-auto">
+					<div class="footer-logo">
+						<h3 class="logo-title">Swinftly</h3>
+						<!-- <img src="images/logo.png" alt="footer-logo"> -->
+					</div>
+					<div class="copyright">
+						<p>@2022 Swinftly All Rights Reserved
+						</p>
+					</div>
+				</div>
+				<div class="col-lg-6 text-lg-right">
+					<!-- Social Icons -->
+					<ul class="footer-links list-inline">
+						<li class="list-inline-item">
+							<a class="scrollTo" href="mailto:swinftly@gmail.com">swinftly@gmail.com</a>
+						</li>
+					</ul>
+					<ul class="social-icons list-inline">
+						<li class="list-inline-item">
+							<a target="_blank" href="https://www.linkedin.com/in/krzysztof-kapa%C5%82a-55a031188/"><i
+									class="text-primary ti-linkedin"></i></a>
+						</li>
+						<li class="list-inline-item">
+							<a target="_blank" href="https://apps.apple.com/us/app/swinftly/id1623446403"><i
+									class="text-primary ti-apple"></i></a>
+						</li>
+					</ul>
+					<!-- Footer Links -->
+				</div>
+			</div>
+		</div>
+	</footer>
 
 	<!-- JAVASCRIPTS -->
 	<script src="plugins/jquery/jquery.js"></script>
