--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="apple-itunes-app" content="app-id=1623446403">
 	<title>Swinftly</title>
 
 	<!-- PLUGINS CSS STYLE -->
