--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NT5D101JNT"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag() { dataLayer.push(arguments); }
+	gtag('js', new Date());
+
+	gtag('config', 'G-NT5D101JNT');
+</script>
+
 <body class="body-wrapper">
 
 
