--- a/policy.html
+++ b/policy.html
@@ -47,7 +47,15 @@
         word-break: break-word !important;
     }
 </style>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NT5D101JNT"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
+    gtag('config', 'G-NT5D101JNT');
+</script>
 <div data-custom-class="body">
     <div><strong><span style="font-size: 26px;"><span data-custom-class="title">PRIVACY NOTICE</span></span></strong>
     </div>
